--- a/public/elearnigClass/home.html
+++ b/public/elearnigClass/home.html
@@ -276,9 +276,7 @@
 
     //子页面调用新建课堂
     function createClass() {
-
         $('.class_createContent').show(150);
-
         $('.mask').show();
     }
 
@@ -486,6 +484,7 @@ console.log($(event.$input).parent().parent().index(),'下标')
         console.log(id, '课程ｉｄ');
         console.log(publisher_id, 'publisher_id');
         editorFlag = true;
+        initData();
         $.ajax({
             type: "POST",
             url: "http://192.168.50.15:9007/elearning/elearningControl/",
@@ -529,29 +528,26 @@ console.log($(event.$input).parent().parent().index(),'下标')
                         $('#isPublish').removeAttr("checked");
                     }
 //                    console.log(formatTime(new Date(video[0].liveTime)),'sdasd')
-                    console.log(formatTime(new Date(video[0].liveTime),true),'riqi')
+                    console.log(formatTime(new Date(video[0].liveTime),true),'riqi');
                     // 章节videos 对象回填
                     for(var k in video){
                         $('.table_data').append("<div class='list_item'>\n" +
-                                    "                                 <span>" + video[k].squence + "</span>\n" +
-                                    "                                 <span><input oninput='input_chapterName(video[k].squence,this)' value="+video[k].name+" type='text'></span>\n" +
-                                    "                                 <span>" + teacherName + "</span>\n" +
-                                    "                                  <div class=\"c-datepicker-date-editor c-datepicker-single-editor J-datepickerTime-single mt10\">\n"+
-                                                                                         "                              <i class=\"c-datepicker-range__icon kxiconfont icon-clock\"></i>\n"+
-                                                                                         "                              <input type=\"text\" autocomplete=\"off\" name=\"\" placeholder='"+formatTime(new Date(video[k].liveTime),true)+"' class=\" c-datepicker-data-input only-date\">\n"+
-                                                                                         "                    </div> \n" +
-                                    "                                 <span onclick='delete_chapter(video[k].squence,this)'>删除</span>\n" +
-                                    "                                 </div>");
-//                        console.log(video[k].name,'章节名称');
-//                        console.log(video[k].squence,'章节序列');
-//                        console.log(video[k].liveTime,'章节时间');
+                                    "<span>" + video[k].squence + "</span>\n" +
+                                    "<span><input oninput='input_chapterName(video[k].squence,this)' value="+video[k].name+" type='text'></span>\n" +
+                                    "<span>" + teacherName + "</span>\n" +
+                                    " <div class=\"c-datepicker-date-editor c-datepicker-single-editor J-datepickerTime-single mt10\">\n"+
+                                                        "          <i class=\"c-datepicker-range__icon kxiconfont icon-clock\"></i>\n"+
+                                                        "          <input type=\"text\" autocomplete=\"off\" name=\"\" placeholder='"+formatTime(new Date(video[k].liveTime),true)+"' class=\" c-datepicker-data-input only-date\">\n"+
+                                                        "</div> \n" +
+                                    "<span onclick='delete_chapter(video[k].squence,this)'>删除</span>\n" +
+                                    "</div>");
+                        initDate();
                         videos.push({
                                     name: video[k].name,
                                     liveTime: video[k].liveTime,
                                     userID: teacherId,
                                     squence: video[k].squence
                         });
-                        initDate();
 
                     }
                 }
@@ -766,6 +762,7 @@ console.log($(event.$input).parent().parent().index(),'下标')
     }
 
     function initDate(){
+        console.log('构建日期')
                 var DATAPICKERAPI = {
                           // 默认input显示当前月,自己获取后填充
                           activeMonthRange: function () {
