--- a/public/elearnigClass/home.html
+++ b/public/elearnigClass/home.html
@@ -67,7 +67,7 @@
 <div class="chapter_createContent">
     <div class="createNav">
         <div class="createLeft">直播章节</div>
-        <div class="createRight" onclick="maskClick()"><i></i></div>
+        <div class="createRight" onclick="maskClick()"><img src="img/aBa-close.png" width="12"></div>
     </div>
 
     <div class="schedule_content_chapter">
@@ -103,7 +103,7 @@
 <div class="class_createContent">
     <div class="createNav">
         <div class="createLeft">新建课堂</div>
-        <div class="createRight" onclick="maskClick()"><i></i></div>
+        <div class="createRight" onclick="maskClick()"><img src="img/aBa-close.png" width="12"></div>
     </div>
     <div class="content create-content">
         <div class="create-contentList">
