--- a/public/elearnigClass/home.html
+++ b/public/elearnigClass/home.html
@@ -54,11 +54,11 @@
 
 <!-- 课程回顾模块 start-->
 <div class="review">
-<div class="review_title">
-<div>課堂回顧</div>
-<div onclick="hideReview()">Ｘ</div>
+    <div class="review_title createNav">
+    <div class="createLeft">課堂回顧</div>
+    <div class="createRight" onclick="hideReview()"><img src="img/aBa-close.png" width="12"></div>
 </div>
-<div class="review_content"></div>
+<div class="review_content "></div>
 </div>
 <!-- 课程回顾模块 end-->
 
@@ -77,7 +77,7 @@
             <div class="table_title_chapter">
                 <span class="name">章节名称</span>
                 <span class="teacher">授课老师</span>
-                <span class="teacher">授课时间</span>
+                <span class="time">授课时间</span>
                 <span class="operation">操作</span>
             </div>
             <div class="table_data_chapter">
@@ -107,7 +107,7 @@
     </div>
     <div class="content create-content">
         <div class="create-contentList">
-            <span class="create-contentLeft">课程名称</span><input id="class_name" type="text">
+            <span class="create-contentLeft">课程名称</span><input id="class_name" class="add-CourseName" type="text">
         </div>
         <div class="create-contentList">
             <span class="create-contentLeft">课程封面</span>
@@ -117,7 +117,7 @@
 
         </div>
         <div class="create-contentList">
-            <span class="create-contentLeft">课程概述</span><textarea id="class_info" rows="4" ></textarea>
+            <span class="create-contentLeft">课程概述</span><textarea id="class_info" class="add-CourseName" rows="4" ></textarea>
         </div>
     </div>
 
@@ -127,7 +127,7 @@
             <div class="table_title">
                 <span class="table_title_number">课时</span>
                 <span class="table_title_name">名称</span>
-                <span class="table_title_teacher">授课老师</span>
+                <span class="table_title_teacher public-textHidden">授课老师</span>
                 <span class="table_title_time">授课时间</span>
                 <span class="table_title_del">操作</span>
             </div>
@@ -144,7 +144,7 @@
             </div>
             <div class="table_bottom">
                 <button class="add-class bottom-15" onclick="addVideos('','')">添加课时</button>
-                <div class="bottom-15 release"><input id="isPublish" type="checkbox" onchange="isPublish_change()">立即发布</div>
+                <div class="bottom-15 release"><input id="isPublish" class="Publish-btn" type="checkbox" onchange="isPublish_change()">立即发布</div>
             </div>
         </div>
     </div>
@@ -305,8 +305,8 @@
                                 $('.table_data_chapter').append("<div class='list_item'>\n" +
                                    "                                 <span class='name'>"+video[k].name+"</span>\n" +
                                    "                                 <span class='teacher'>" + teacherName + "</span>\n" +
-                                   "                                 <span class='teacher'>"+formatTime(new Date(video[k].liveTime),true)+"</span>\n" +
-                                   "                                 <span><button onclick='toLive(\""+flag+"\","+JSON.stringify(video[k])+")'>"+flag+"</button></span>\n" +
+                                   "                                 <span class='time timeList'>"+formatTime(new Date(video[k].liveTime),true)+"</span>\n" +
+                                   "                                 <span class='operation'><button class='aBa-play' onclick='toLive(\""+flag+"\","+JSON.stringify(video[k])+")'>"+flag+"</button></span>\n" +
                                    "                                 </div>");
                             }
 
@@ -342,7 +342,7 @@
         $('.table_data').append("<div class='list_item table_title'>\n" +
             "<span class='table_title_number table_title_numberT'>" + class_index + "</span>\n" +
             "<span class='table_title_name'><input oninput='input_chapterName(" + (class_index - 1) + ",this)' type='text'></span>\n" +
-            "<span class='table_title_teacher'>" + teacherName + "</span>\n" +
+            "<span class='table_title_teacher public-textHidden'>" + teacherName + "</span>\n" +
             "<div class=\"c-datepicker-date-editor c-datepicker-single-editor J-datepicker-day mt10 table_title_time\">\n"+
             "                              <i class=\"c-datepicker-range__icon kxiconfont icon-clock\"></i>\n"+
             "                              <input type=\"text\" autocomplete=\"off\" name=\"\" placeholder=\"选择日期\" class=\" c-datepicker-data-input only-date\" value=\"\">\n"+
@@ -531,12 +531,12 @@ console.log($(event.$input).parent().parent().index(),'下标')
                         $('.table_data').append("<div class='list_item table_title'>\n" +
                                     "<span class='table_title_number table_title_numberT'>" + video[k].squence + "</span>\n" +
                                     "<span class='table_title_name'><input value="+video[k].name+" oninput='input_chapterName(" + (class_index - 1) + ",this)' type='text'></span>\n" +
-                                    "<span class='table_title_teacher'>" + teacherName + "</span>\n" +
+                                    "<span class='table_title_teacher public-textHidden'>" + teacherName + "</span>\n" +
                                     "<div class=\"c-datepicker-date-editor c-datepicker-single-editor J-datepicker-day mt10 table_title_time\">\n"+
                                     "                              <i class=\"c-datepicker-range__icon kxiconfont icon-clock\"></i>\n"+
                                     "                              <input type=\"text\" autocomplete=\"off\" name=\"\" placeholder='"+formatTime(new Date(video[k].liveTime),true)+"' class=\" c-datepicker-data-input only-date\" value=\"\">\n"+
                                     "                    </div> "+
-                                    "<span class='table_title_del' onclick='delete_chapter(video[k].squence,this)' class='table_title_del'><i></i></span>\n" +
+                                    "<span class='table_title_del' onclick='delete_chapter("+video[k].squence+",this)' class='table_title_del'><i></i></span>\n" +
                                     "</div>");
                                 videos.push({
                                     name: video[k].name,
