--- a/public/elearnigClass/home.html
+++ b/public/elearnigClass/home.html
@@ -309,7 +309,7 @@
                                    "                                 <span class='name'>"+video[k].name+"</span>\n" +
                                    "                                 <span class='teacher'>" + teacherName + "</span>\n" +
                                    "                                 <span class='time timeList'>"+formatTime(new Date(video[k].liveTime),true)+"</span>\n" +
-                                   "                                 <span class='operation'><button class='"+flagClass+"' onclick='toLive(\""+flag+"\","+JSON.stringify(video[k])+")'>"+flag+"</button></span>\n" +
+                                   "                                 <span class='operation'><button class='"+flagClass+"' onclick='toLive(\""+flag+"\","+JSON.stringify(video[k])+")'></button></span>\n" +
                                    "                                 </div>");
                             }
 
