--- a/public/elearnigClass/home.html
+++ b/public/elearnigClass/home.html
@@ -113,7 +113,7 @@
             <span class="create-contentLeft">课程封面</span>
             <div class="image_box">
             </div>
-            <button id="uploadImage" class="uploadImage" onclick="uploadImage()">上传</button>
+            <button id="uploadImage" class="uploadImage" onclick="uploadImage()"><i></i>上传</button>
 
         </div>
         <div class="create-contentList">
