--- a/public/elearnigClass/home.html
+++ b/public/elearnigClass/home.html
@@ -144,7 +144,7 @@
             </div>
             <div class="table_bottom">
                 <button class="add-class bottom-15" onclick="addVideos('','')">添加课时</button>
-                <div class="bottom-15 release"><input id="isPublish" class="Publish-btn" type="checkbox" onchange="isPublish_change()">立即发布</div>
+                <div class="bottom-15 release release-bottom"><span>立即发布</span><input id="isPublish" class="Publish-btn" type="checkbox" onchange="isPublish_change()"></div>
             </div>
         </div>
     </div>
