--- a/public/elearnigClass/home.html
+++ b/public/elearnigClass/home.html
@@ -29,7 +29,7 @@
             <div class="box_cont">
                 <div class="left_box">
                     <div class="header">课堂管理</div>
-                    <div id="classInfo" class="active">课程信息</div>
+                    <div id="classInfo" class="active">我的课程</div>
                     <div id="myFile">我的课件</div>
                 </div>
                 <div class="right_box">
