--- a/public/elearnigClass/createClass.html
+++ b/public/elearnigClass/createClass.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div class="topDiv">
-    <h1>正在开课</h1>
+    <h1>我的课程</h1>
     <span class="courseBtn" onclick="createClass()">新建课堂</span>
 </div>
 <div class="list">
