--- a/public/elearnigClass/home.html
+++ b/public/elearnigClass/home.html
@@ -175,6 +175,7 @@
     var videos = new Array();
     //是否编辑状态
     var editorFlag = false;
+    var editorId = null;
     //    // 当前输入框下标
     //    var inputIndex = 0;
     //    //当前时间框下标
@@ -229,6 +230,7 @@
 
         //获取用户信息
         function getUserById() {
+            debugger
             $.ajax({
                 type: "POST",
                 url: "https://www.maaee.com/Excoord_For_Education/webservice",
@@ -244,7 +246,7 @@
                 },
                 success: function (data) {
                     var res = JSON.parse(data);
-                    console.log(res);
+                    console.log(res,'牛');
                     if (res.success) {
                         $('#user_avatar').attr('src', res.response.avatar);
                         $('.username').text(res.response.userName);
@@ -283,7 +285,8 @@
     function showIframe(id, publisher_id){
         $.ajax({
                     type: "POST",
-                    url: "http://192.168.50.15:9007/elearning/elearningControl/",
+//                    url: "http://192.168.50.15:9007/elearning/elearningControl/",
+                    url: "http://www.maaee.com/elearning/elearningControl/",
                     data: {
                         params: JSON.stringify({
                             method: "getCourseByCourseId",
@@ -413,7 +416,7 @@
             layer.msg(warn);
         } else {
             if(editorFlag){
-                updateCourse($('#class_name').val(), imagePath, $('#class_info').val(), isPublish, teacherId, videos);
+                updateCourse($('#class_name').val(), imagePath, $('#class_info').val(), isPublish, teacherId, videos,editorId);
             }else{
                 openClass($('#class_name').val(), imagePath, $('#class_info').val(), isPublish, teacherId, videos);
             }
@@ -440,10 +443,11 @@ console.log($(event.$input).parent().parent().index(),'下标')
 
 
 
-    function updateCourse(class_name, class_imagePath, class_info, isPublish, teacherId, videos){
+    function updateCourse(class_name, class_imagePath, class_info, isPublish, teacherId, videos,id){
         $.ajax({
                     type: "POST",
-                    url: "http://192.168.50.15:9007/elearning/elearningControl/",
+//                    url: "http://192.168.50.15:9007/elearning/elearningControl/",
+                    url: "http://www.maaee.com/elearning/elearningControl/",
                     data: {
                         params: JSON.stringify({
                             method: "updateCourse",
@@ -454,7 +458,8 @@ console.log($(event.$input).parent().parent().index(),'下标')
                                 isPublish: isPublish,
                                 publisher_id: teacherId,
                                 videos: videos,
-                                schoolId: 110
+                                schoolId: 401,
+                                id:id
                             })
                         })
                     },
@@ -488,7 +493,8 @@ console.log($(event.$input).parent().parent().index(),'下标')
 
         $.ajax({
             type: "POST",
-            url: "http://192.168.50.15:9007/elearning/elearningControl/",
+//            url: "http://192.168.50.15:9007/elearning/elearningControl/",
+            url: "http://www.maaee.com/elearning/elearningControl/",
             data: {
                 params: JSON.stringify({
                     method: "getCourseByCourseId",
@@ -524,6 +530,7 @@ console.log($(event.$input).parent().parent().index(),'下标')
                     $('#class_info').val(data.content);
                     //复选框回填
                     isPublish = data.isPublish;
+                    editorId = data.id;
                     if(data.isPublish == 1){ // 已发布
                         $('#isPublish').attr("checked",true);
                     }else if(isPublish == 2){ // 未发布
@@ -547,7 +554,8 @@ console.log($(event.$input).parent().parent().index(),'下标')
                                     name: video[k].name,
                                     liveTime: video[k].liveTime,
                                     userID: teacherId,
-                                    squence: video[k].squence
+                                    squence: video[k].squence,
+                                    id: video[k].id
                                 });
                                 initDate();
 
@@ -571,7 +579,8 @@ console.log($(event.$input).parent().parent().index(),'下标')
         }, function(){
             $.ajax({
                                 type: "POST",
-                                url: "http://192.168.50.15:9007/elearning/elearningControl/",
+//                                url: "http://192.168.50.15:9007/elearning/elearningControl/",
+                                url: "http://www.maaee.com/elearning/elearningControl/",
                                 data: {
                                     params: JSON.stringify({
                                         method: "deleteCourse",
@@ -606,9 +615,11 @@ console.log($(event.$input).parent().parent().index(),'下标')
 
 
     function openClass(class_name, class_imagePath, class_info, isPublish, teacherId, videos) {
+        debugger
         $.ajax({
             type: "POST",
-            url: "http://192.168.50.15:9007/elearning/elearningControl/",
+//            url: "http://192.168.50.15:9007/elearning/elearningControl/",
+            url: "http://www.maaee.com/elearning/elearningControl/",
             data: {
                 params: JSON.stringify({
                     method: "addCourse",
@@ -619,7 +630,7 @@ console.log($(event.$input).parent().parent().index(),'下标')
                         isPublish: isPublish,
                         publisher_id: teacherId,
                         videos: videos,
-                        schoolId: 110
+                        schoolId: 401
                     })
                 })
             },
@@ -702,7 +713,8 @@ console.log($(event.$input).parent().parent().index(),'下标')
         }else{
             $.ajax({
                         type: "POST",
-                        url: "http://192.168.50.15:9007/elearning/elearningControl/",
+//                        url: "http://192.168.50.15:9007/elearning/elearningControl/",
+                        url: "http://www.maaee.com/elearning/elearningControl/",
                         data: {
                             params: JSON.stringify({
                                 method: "findVideoById",
@@ -721,7 +733,7 @@ console.log($(event.$input).parent().parent().index(),'下标')
                                 var targetId = res.response.id;
                                 var title = res.response.name;
                                 var requestUrl = "https://www.maaee.com/Excoord_PhoneService/elearningClass/teacherElearningLive/"
-                                requestUrl += userId + "/" + targetType + "/" + targetId + "/" + title + "?title=" + title;
+                                requestUrl += 23836 + "/" + targetType + "/" + targetId + "/" + title + "?title=" + title;
                                 window.open(requestUrl);
                             } else {
                                 layer.msg(res.msg, '查询失败');
