--- a/public/eschool/home.html
+++ b/public/eschool/home.html
@@ -122,7 +122,7 @@
                 <span class="table_title_time">授课时间</span>
                 <span class="table_title_del">操作</span>
             </div>
-            <div>
+            <div class="table_data-cont">
                 <div class="table_data">
                     <!--
                      <div class="list_item">
@@ -136,12 +136,12 @@
                 </div>
             </div>
             <div class="table_bottom">
-                <button class="add-class bottom-15" onclick="addVideos('','')">添加课时</button>
+                <button class="add-class" onclick="addVideos('','')">添加课时</button>
                 <div class="bottom-15 release release-bottom"><span>立即发布</span><input id="isPublish" class="Publish-btn" type="checkbox" onchange="isPublish_change()"></div>
             </div>
         </div>
     </div>
-    <div class="submit-btn">
+    <div class="schedule_footer">
         <button class="submitBlue" onclick="submitClass()">提交</button>
     </div>
 </div>
