放开建课逻辑

--- a/public/eschool/home.html
+++ b/public/eschool/home.html
@@ -409,11 +409,11 @@
         if (warn != '') {
             layer.msg(warn);
         } else {
-            /*if(editorFlag){
+            if(editorFlag){
                 updateCourse($('#class_name').val(), imagePath, $('#class_info').val(), isPublish, teacherId, videos,editorId);
             }else{
                 openClass($('#class_name').val(), imagePath, $('#class_info').val(), isPublish, teacherId, videos);
-            }*/
+            }
 
         }
     }
